[package]
name = "elevator"
version = "0.1.0"
authors = ["Dolpheyn <farissufyan99@gmail.com>"]
edition = "2018"

[lib]
name = "elevator"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
floating-duration = "0.1.2"
