[package]
name = "rustwitter-api"
version = "0.1.0"
authors = ["Dolpheyn <farissufyan99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.8.1"
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
sqlx = { version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json",
"postgres", "uuid"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.11"
log = "0.4.8"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
uuid = "0.8.1"
thiserror = "1.0.18"
http-service = "0.5.0"
http-types = "1.3.1"

[dev-dependencies]
http-service-mock = "0.5.0"
