[package]
name = "async"
version = "0.1.0"
authors = ["Dolpheyn <farissufyan99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = "1.6.2"
hyper = "0.13.6"
tokio = {version = "0.2.21", features = ["full"] }
anyhow = "1.0.31"
reqwest = { version = "0.10.6", features = ["blocking"] }
